tests/ui/where-clauses/self-in-where-clause-future-compat.stderr
error: the trait `Trait` cannot be made into an object
  --> $DIR/self-in-where-clause-future-compat.rs:8:8
   |
LL |     fn unsafe_trait_bound(&self) where (): UnsafeTrait<Self> {}
   |        ^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #51443 <https://github.com/rust-lang/rust/issues/51443>
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/self-in-where-clause-future-compat.rs:8:8
   |
LL | trait Trait {
   |       ----- this trait cannot be made into an object...
LL |     fn unsafe_trait_bound(&self) where (): UnsafeTrait<Self> {}
   |        ^^^^^^^^^^^^^^^^^^ ...because method `unsafe_trait_bound` references the `Self` type in its `where` clause
   = help: consider moving `unsafe_trait_bound` to another trait
note: the lint level is defined here
  --> $DIR/self-in-where-clause-future-compat.rs:3:9
   |
LL | #![deny(where_clauses_object_safety)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

